--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework#1</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -12,10 +19,8 @@
         <a href="WebStudio">WebStudio</a>
         <ul>
           <li><a href="Agencja">Agencja</a></li>
-          <li><a href="Portfolio">Portfolio</a></li>
-          <li>
-            <a href="Kontakt">Kontakt </a>
-          </li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="Kontakt">Kontakt</a></li>
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
