--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework#1</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <a href="WebStudio">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="Agencja">Agencja</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
@@ -57,7 +57,7 @@
       <ul>
         <li>
           <img
-            src="images/kod-html.jpg"
+            src="./images/Main-page/kod-html.jpg"
             alt="pisanie kodu html"
             width="370"
             height="294"
@@ -65,7 +65,7 @@
         </li>
         <li>
           <img
-            src="images/konfiguracja-smartfona.jpg"
+            src="./images/Main-page/konfiguracja-smartfona.jpg"
             alt="konfiguracja smartfona"
             width="370"
             height="294"
@@ -73,7 +73,7 @@
         </li>
         <li>
           <img
-            src="images/paleta-kolorów.jpg"
+            src="./images/Main-page/paleta-kolorów.jpg"
             alt="paleta kolorów"
             width="370"
             height="294"
@@ -87,7 +87,7 @@
         <li>
           <figure>
             <img
-              src="images/team-1.jpg"
+              src="./images/Main-page/team-1.jpg"
               alt="Product Designer"
               width="270"
               height="260"
@@ -98,7 +98,7 @@
         <li>
           <figure>
             <img
-              src="images/team-2.jpg"
+              src="./images/Main-page/team-2.jpg"
               alt="Frontend Developer"
               width="270"
               height="260"
@@ -109,7 +109,7 @@
         <li>
           <figure>
             <img
-              src="images/team-3.jpg"
+              src="./images/Main-page/team-3.jpg"
               alt="Marketing employee"
               width="270"
               height="260"
@@ -120,7 +120,7 @@
         <li>
           <figure>
             <img
-              src="images/team-4.jpg"
+              src="./images/Main-page/team-4.jpg"
               alt="UI Designer"
               width="270"
               height="260"
