--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,147 @@
     />
   </head>
   <body>
-    <p>Hello world</p>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="Agencja">Agencja</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="Kontakt">Kontakt</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
+    </header>
+    <div>
+      <ul class="button">
+        <li><button type="button">Wszystkie</button></li>
+        <li><button type="button">Strony</button></li>
+        <li><button type="button">Aplikacje</button></li>
+        <li><button type="button">Dizajn</button></li>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+    </div>
+    <main>
+      <ul>
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Technocrack.jpg"
+              alt="Technocrack"
+              width="370"
+              height="294"
+            />
+            <figcaption>Technocrack Strona internetowa</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/New Orlean-vs-Golden-Star.jpg"
+              alt="NBA poster"
+              width="370"
+              height="294"
+            />
+            <figcaption>Grafika New Orlean vs Golden Star Dizajn</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Restauracja-Seafood.jpg"
+              alt="Restauracja Seafood"
+              width="370"
+              height="294"
+            />
+            <figcaption>Restauracja Seafood Aplikacja</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Projekt-Prime.jpg"
+              alt="Sluchawki"
+              width="370"
+              height="294"
+            />
+            <figcaption>Projekt Prime Marketing</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Projekt-Boxes.jpg"
+              alt="Kartony"
+              width="370"
+              height="294"
+            />
+            <figcaption>Projekt Boxes Aplikacja</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Inspiration-has-no-Borders.jpg"
+              alt="Monitor"
+              width="370"
+              height="294"
+            />
+            <figcaption>
+              Inspiration has no Borders Strona internetowa
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Magazyn-Limited-Edition.jpg"
+              alt="Czasopismo"
+              width="370"
+              height="294"
+            />
+            <figcaption>Magazyn Limited Edition Dizajn</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Projekt-LAB.jpg"
+              alt="Etykieta LAB"
+              width="370"
+              height="294"
+            />
+            <figcaption>Projekt LAB Marketing</figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img
+              src="./images/Portfolio/Growing-Business.jpg"
+              alt="Laptop Growing Business"
+              width="370"
+              height="294"
+            />
+            <figcaption>Growing Business Aplikacja</figcaption>
+          </figure>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <a href="WebStudio">WebStudio</a>
+      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </address>
+    </footer>
   </body>
 </html>
