--- a/index.html
+++ b/index.html
@@ -16,45 +16,50 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="Agencja">Agencja</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="Kontakt">Kontakt</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-color-1">Web</span
+          ><span class="logo-color-2">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="link" href="Agencja">Agencja</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="Kontakt">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <a class="link contact" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="link contact" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <div>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługe</button>
+      <div class="wrapper">
+        <h1 class="header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button class="order-button" type="button">Zamów usługe</button>
       </div>
-      <h2>LOREM IPSUM</h2>
+      <h2 class="secondary-header">LOREM IPSUM</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
         sem. Sed non sodales dui. Interdum et malesuada
       </p>
-      <h2>LOREM IPSUM</h2>
+      <h2 class="secondary-header">LOREM IPSUM</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
         sem. Sed non sodales dui. Interdum et malesuada
       </p>
-      <h2>LOREM IPSUM</h2>
+      <h2 class="secondary-header">LOREM IPSUM</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
         sem. Sed non sodales dui. Interdum et malesuada
       </p>
-      <h2>LOREM IPSUM</h2>
+      <h2 class="secondary-header">LOREM IPSUM</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
         sem. Sed non sodales dui. Interdum et malesuada
       </p>
     </main>
     <article>
-      <h2>Czym się zajmujemy</h2>
-      <ul>
+      <h2 class="article-header">Czym się zajmujemy</h2>
+      <ul class="list">
         <li>
           <img
             src="./images/Main-page/kod-html.jpg"
@@ -81,9 +86,9 @@
         </li>
       </ul>
     </article>
-    <section>
-      <h2>Nasz zespół</h2>
-      <ul>
+    <section class="wrapper2">
+      <h2 class="article-header">Nasz zespół</h2>
+      <ul class="list">
         <li>
           <figure>
             <img
@@ -92,7 +97,10 @@
               width="270"
               height="260"
             />
-            <figcaption>John Doe Product Designer</figcaption>
+            <figcaption>
+              <span class="name">John Doe</span>
+              <span class="job-description">Product Designer</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -103,7 +111,10 @@
               width="270"
               height="260"
             />
-            <figcaption>John Doe Frontend Developer</figcaption>
+            <figcaption>
+              <span class="name">John Doe</span>
+              <span class="job-description">Frontend Developer</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -114,7 +125,10 @@
               width="270"
               height="260"
             />
-            <figcaption>John Doe Marketing</figcaption>
+            <figcaption>
+              <span class="name">John Doe</span>
+              <span class="job-description">Marketing</span>
+            </figcaption>
           </figure>
         </li>
         <li>
@@ -125,17 +139,27 @@
               width="270"
               height="260"
             />
-            <figcaption>John Doe UI Designer</figcaption>
+            <figcaption>
+              <span class="name">John Doe</span>
+              <span class="job-description">UI Designer</span>
+            </figcaption>
           </figure>
         </li>
       </ul>
     </section>
-    <footer>
-      <a href="WebStudio">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+    <footer class="wrapper">
+      <a class="logo" href="./index.html"
+        ><span class="logo-color-1">Web</span
+        ><span class="logo-color-3">Studio</span></a
+      >
+      <address class="address-details">
+        m. Warszawa, Aleje Jerozolimskie 21
+      </address>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <a class="link-color" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="link-color" href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
