--- a/portfolio.html
+++ b/portfolio.html
@@ -16,27 +16,32 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="Agencja">Agencja</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="Kontakt">Kontakt</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-color-1">Web</span
+          ><span class="logo-color-2">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="link" href="Agencja">Agencja</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="Kontakt">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <a class="link contact" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="link contact" href="tel:+48111111111">+48 111 111 111</a>
     </header>
-    <div>
-      <ul class="button">
-        <li><button type="button">Wszystkie</button></li>
-        <li><button type="button">Strony</button></li>
-        <li><button type="button">Aplikacje</button></li>
-        <li><button type="button">Dizajn</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-    </div>
     <main>
-      <ul>
+      <div>
+        <ul class="menu">
+          <li><button class="menu-button" type="button">Wszystkie</button></li>
+          <li><button class="menu-button" type="button">Strony</button></li>
+          <li><button class="menu-button" type="button">Aplikacje</button></li>
+          <li><button class="menu-button" type="button">Dizajn</button></li>
+          <li><button class="menu-button" type="button">Marketing</button></li>
+        </ul>
+      </div>
+      <ul class="list">
         <li>
           <figure>
             <img
@@ -45,22 +50,26 @@
               width="370"
               height="294"
             />
-            <figcaption>Technocrack Strona internetowa</figcaption>
+            <figcaption>
+              <span class="title">Technocrack</span>
+              <span class="title-description">Strona internetowa</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
-              src="./images/Portfolio/New Orlean-vs-Golden-Star.jpg"
+              src="./images/Portfolio/new-orlean-vs-golden-star.jpg"
               alt="NBA poster"
               width="370"
               height="294"
             />
-            <figcaption>Grafika New Orlean vs Golden Star Dizajn</figcaption>
+            <figcaption>
+              <span class="title">Grafika New Orlean vs Golden Star</span>
+              <span class="title-description">Dizajn</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -69,10 +78,12 @@
               width="370"
               height="294"
             />
-            <figcaption>Restauracja Seafood Aplikacja</figcaption>
+            <figcaption>
+              <span class="title">Restauracja Seafood</span>
+              <span class="title-description">Aplikacja</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -81,10 +92,12 @@
               width="370"
               height="294"
             />
-            <figcaption>Projekt Prime Marketing</figcaption>
+            <figcaption>
+              <span class="title">Projekt Prime</span>
+              <span class="title-description">Marketing</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -93,10 +106,12 @@
               width="370"
               height="294"
             />
-            <figcaption>Projekt Boxes Aplikacja</figcaption>
+            <figcaption>
+              <span class="title">Projekt Boxes</span>
+              <span class="title-description">Aplikacja</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -106,11 +121,11 @@
               height="294"
             />
             <figcaption>
-              Inspiration has no Borders Strona internetowa
+              <span class="title">Inspiration has no Borders</span>
+              <span class="title-description">Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -119,10 +134,12 @@
               width="370"
               height="294"
             />
-            <figcaption>Magazyn Limited Edition Dizajn</figcaption>
+            <figcaption>
+              <span class="title">Magazyn Limited Edition</span>
+              <span class="title-description">Dizajn</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -131,10 +148,12 @@
               width="370"
               height="294"
             />
-            <figcaption>Projekt LAB Marketing</figcaption>
+            <figcaption>
+              <span class="title">Projekt LAB</span>
+              <span class="title-description">Marketing</span>
+            </figcaption>
           </figure>
         </li>
-
         <li>
           <figure>
             <img
@@ -143,17 +162,27 @@
               width="370"
               height="294"
             />
-            <figcaption>Growing Business Aplikacja</figcaption>
+            <figcaption>
+              <span class="title">Growing Business</span>
+              <span class="title-description">Aplikacja</span>
+            </figcaption>
           </figure>
         </li>
       </ul>
     </main>
-    <footer>
-      <a href="WebStudio">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+    <footer class="wrapper">
+      <a class="logo" href="./index.html"
+        ><span class="logo-color-1">Web</span
+        ><span class="logo-color-3">Studio</span></a
+      >
+      <address class="address-details">
+        m. Warszawa, Aleje Jerozolimskie 21
+      </address>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <a class="link-color" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="link-color" href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
