fix: img update
pictures rename

--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
       <ul class="list">
         <li>
           <img
-            src="./images/Main-page/kod-html.jpg"
-            alt="pisanie kodu html"
+            src="./images/Main-page/html-code.jpg"
+            alt="html code writting"
             width="370"
             height="294"
           />
         </li>
         <li>
           <img
-            src="./images/Main-page/konfiguracja-smartfona.jpg"
-            alt="konfiguracja smartfona"
+            src="./images/Main-page/smartphone-configuration.jpg"
+            alt="smartphone configuration"
             width="370"
             height="294"
           />
         </li>
         <li>
           <img
-            src="./images/Main-page/paleta-kolorów.jpg"
-            alt="paleta kolorów"
+            src="./images/Main-page/color-palette.jpg"
+            alt="color palette"
             width="370"
             height="294"
           />
