--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,8 @@
         <li>
           <figure>
             <img
-              src="./images/Portfolio/Restauracja-Seafood.jpg"
-              alt="Restauracja Seafood"
+              src="./images/Portfolio/seafood-restaurant.jpg"
+              alt="seafood restaurant"
               width="370"
               height="294"
             />
@@ -87,8 +87,8 @@
         <li>
           <figure>
             <img
-              src="./images/Portfolio/Projekt-Prime.jpg"
-              alt="Sluchawki"
+              src="./images/Portfolio/project-prime.jpg"
+              alt="Headphones"
               width="370"
               height="294"
             />
@@ -101,8 +101,8 @@
         <li>
           <figure>
             <img
-              src="./images/Portfolio/Projekt-Boxes.jpg"
-              alt="Kartony"
+              src="./images/Portfolio/project-boxes.jpg"
+              alt="Boxes"
               width="370"
               height="294"
             />
@@ -129,8 +129,8 @@
         <li>
           <figure>
             <img
-              src="./images/Portfolio/Magazyn-Limited-Edition.jpg"
-              alt="Czasopismo"
+              src="./images/Portfolio/limited-edition-magazine.jpg"
+              alt="magazine"
               width="370"
               height="294"
             />
@@ -143,8 +143,8 @@
         <li>
           <figure>
             <img
-              src="./images/Portfolio/Projekt-LAB.jpg"
-              alt="Etykieta LAB"
+              src="./images/Portfolio/project-lab.jpg"
+              alt="LAB label"
               width="370"
               height="294"
             />
