fix: portfolio.html
button section change (removed <ul>)

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,11 @@
     </header>
     <main>
       <div>
-        <ul class="menu">
-          <li><button class="menu-button" type="button">Wszystkie</button></li>
-          <li><button class="menu-button" type="button">Strony</button></li>
-          <li><button class="menu-button" type="button">Aplikacje</button></li>
-          <li><button class="menu-button" type="button">Dizajn</button></li>
-          <li><button class="menu-button" type="button">Marketing</button></li>
-        </ul>
+        <button class="menu-button" type="button">Wszystkie</button>
+        <button class="menu-button" type="button">Strony</button>
+        <button class="menu-button" type="button">Aplikacje</button>
+        <button class="menu-button" type="button">Dizajn</button>
+        <button class="menu-button" type="button">Marketing</button>
       </div>
       <ul class="list">
         <li>
