--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
         ><span class="logo-color-1">Web</span
         ><span class="logo-color-3">Studio</span></a
       >
+      <p>m. Warszawa, Aleje Jerozolimskie 21</p>
       <address class="address-details">
-        m. Warszawa, Aleje Jerozolimskie 21
-      </address>
-      <address>
         <a class="link-color" href="mailto:info@devstudio.com"
           >info@devstudio.com</a
         >
+      </address>
+      <address>
         <a class="link-color" href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
